<resources>
    <string name="no_internet">Unable to connect to the Internet…</string>
    <string name="app_name">Anime Quotes</string>
    <string name="search">Search </string>
    <string name="example">[example]</string>
    <string name="favourite_quotes">Favourite quotes</string>
    <string name="list_available_anime">List available anime</string>
    <string name="search_quotes_by_anime_title">Search Quotes by Anime Title</string>
    <string name="search_quotes_by_anime_character">Search Quotes by Anime Character</string>
    <string name="my_favourite_quotes">My Favourite Quotes</string>
    <string name="ten_random_quotes">Ten Random Quotes</string>
    <string name="toolsLongText">
        Этот мир полон вещей, которые ты не можешь изменить. Чем дольше ты живешь,
        тем больше осознаёшь, что мир состоит из боли, страдания и пустоты. Пока в этом мире существует свет,
        будет и тьма. До тех пор, пока есть победители, будут и проигравшие. Эгоистичное желание «мира» побуждает войны,
        а ненависть побуждается любовью."
    </string>
    <string name="please_wait">Please wait…</string>
    <string name="add_or_remove_a_quote_from_favorites">Add or remove a quote from favorites</string>
    <string name="character_image">Character image</string>
    <string name="home">Home</string>
    <string name="load_new_ten_random_quotes">Load new ten random quotes</string>

</resources>