<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/mainGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="myQuotesButton, randomQuotesButton, searchByNameButton, searchByTitleButton, cardConstrainLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardConstrainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/first_card_background">


        <TextView
            android:id="@+id/characterNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textIsSelectable="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/favouriteButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/favouriteButton"
            app:layout_constraintBottom_toBottomOf="@id/favouriteButton"
            tools:text="Madara Uchiha" />



        <ImageButton
            android:id="@+id/favouriteButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_no_favourite_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/quoteByCharacterTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:ellipsize="marquee"
            android:fontFamily="casual"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:maxLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favouriteButton"
            tools:text="@string/toolsLongText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/myQuotesButton"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:text="@string/my_favourite_quotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/searchByTitleButton"
        android:background="@drawable/button_background_start"/>

    <Button
        android:id="@+id/searchByTitleButton"
        android:layout_width="296dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:text="@string/search_quotes_by_anime_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/searchByNameButton"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/searchByNameButton"
        android:layout_width="296dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:text="@string/search_quotes_by_anime_character"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/randomQuotesButton"
        android:background="@drawable/button_background"/>


    <Button
        android:id="@+id/randomQuotesButton"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginBottom="248dp"
        android:text="@string/ten_random_quotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_background_end"
        />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:constraint_referenced_ids="loadTextView, loaderGlowingLoader"/>

    <com.varunest.loader.TheGlowingLoader
        android:id="@+id/loaderGlowingLoader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/loadTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/please_wait"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    






</androidx.constraintlayout.widget.ConstraintLayout>